# web-hw13-Django-Postgres

./: README.md  pyproject.toml
project_quotes/project_quotes/: settings.py  urls.py
project_quotes/quotes/: forms.py  models.py  urls.py  utils.py  views.py
project_quotes/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
project_quotes/quotes/static/quotes/: style.css
project_quotes/quotes/templates/quotes/: add_quote.html  add_quote_without_author.html  base.html  base_with_if.html
project_quotes/quotes/templatetags/: extract.py  extract_mongo.py
project_quotes/users/: forms.py  models.py  urls.py  views.py
project_quotes/users/templates/users/: logout.html  password_reset_subject.txt  signin.html  signup.html
project_quotes/utils/: add_quotes_to_mondo.py  authors.json  custom_migration.py
