[tool.poetry]
name = "web-hw13-django-postgres"
version = "0.1.0"
description = ""
authors = ["Dmytro Oseledko <d.oseledko@outlook.com>"]
readme = "README.md"
packages = [{include = "web_hw13_django_postgres"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2 = "^2.9.6"
pymongo = "^4.3.3"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
